this app is only for the artists and who wish to learn how to create a a

--- a/src/lib/locales/bn.json
+++ b/src/lib/locales/bn.json
@@ -3,8 +3,7 @@
     "homepage": {
         "title": "আপনার শিল্পকে AI দিয়ে শক্তিশালী করুন",
         "subtitle": "Artisan আপনার অনন্য সৃষ্টি বর্ণনা করতে, বর্ণনা করতে এবং বিক্রি করতে সাহায্য করার জন্য বুদ্ধিমান সরঞ্জাম সরবরাহ করে। আপনার শিল্পে মনোযোগ দিন, আমরা শব্দগুলি পরিচালনা করব। কারিগরদের জন্য প্ল্যাটফর্মটি সম্পূর্ণ বিনামূল্যে।",
-        "artisans_button": "কারিগরদের জন্য",
-        "buyers_button": "ক্রেতাদের জন্য",
+        "artisans_button": "সৃষ্টি শুরু করুন",
         "login": "লগইন",
         "signup": "সাইন আপ",
         "features_title": "আধুনিক কারিগরের জন্য বৈশিষ্ট্য",
@@ -15,8 +14,8 @@
         "feature_2_desc": "আপনার গল্প বলুন, এবং আমাদের AI এটিকে একটি চিত্তাকর্ষক বর্ণনায় পরিমার্জিত করবে।",
         "feature_3_title": "স্মার্ট অ্যানালিটিক্স",
         "feature_3_desc": "গ্রাহকরা কীভাবে আপনার পণ্যগুলির সাথে ইন্টারঅ্যাক্ট করছে তার অন্তর্দৃষ্টি পান।",
-        "feature_4_title": "কাস্টম অনুরোধ",
-        "feature_4_desc": "ক্রেতাদের কাছ থেকে সরাসরি কমিশন অনুরোধ গ্রহণ এবং পরিচালনা করুন।",
+        "feature_4_title": "বিপণন হাব",
+        "feature_4_desc": "প্রচারমূলক সামগ্রী তৈরি করুন এবং আপনার শিল্পের জন্য বাজারের চাহিদা বুঝুন।",
         "art_title": "পরবর্তী প্রজন্মের জন্য সমসাময়িক ভারতীয় শিল্প",
         "art_subtitle": "আধুনিক ভারতীয় শিল্পীদের আবিষ্কার করুন যারা একটি তাজা, প্রাণবন্ত দৃষ্টিভঙ্গির সাথে ঐতিহ্যকে নতুনভাবে সংজ্ঞায়িত করছে।",
         "art_1_title": "ডিজিটাল পৌরাণিক কাহিনী",
@@ -25,8 +24,8 @@
         "art_2_desc": "ভারতীয় মোটিফ দিয়ে ತುಂಬানো গ্রাফিতি এবং স্টেনসিল শিল্প, শহুরে ক্যানভাসে সাহসী বিবৃতি তৈরি করে।",
         "art_3_title": "মিনিমালিস্ট ফোক",
         "art_3_desc": "ওয়ারলি এবং গোন্ডের মতো ঐতিহ্যবাহী লোক রূপগুলি, পরিষ্কার লাইন এবং একটি সমসাময়িক রঙের প্যালেট দিয়ে পুনরায় কল্পনা করা হয়েছে।",
-        "payments_title": "নমনীয় এবং নিরাপদ অর্থপ্রদান",
-        "payments_subtitle": "আমরা প্রত্যেকের জন্য লেনদেনকে নির্বিঘ্ন করতে বিভিন্ন ধরণের অর্থপ্রদানের পদ্ধতি সমর্থন করি। সমস্ত লেনদেন নিরাপদ এবং ভারতীয় প্রবিধানের সাথে সঙ্গতিপূর্ণ।",
+        "payments_title": "আপনার জন্য নমনীয় এবং নিরাপদ অর্থপ্রদান",
+        "payments_subtitle": "আমরা আপনার শিল্পের জন্য অর্থপ্রদান গ্রহণকে নির্বিঘ্ন করতে বিভিন্ন ধরণের অর্থপ্রদানের পদ্ধতি সমর্থন করি। সমস্ত লেনদেন নিরাপদ এবং ভারতীয় প্রবিধানের সাথে সঙ্গতিপূর্ণ।",
         "payments_extra": "...এবং আরও অনেক UPI, ক্রেডিট এবং ডেবিট কার্ড বিকল্প।",
         "footer": "© {year} Artisan। সর্বস্বত্ব সংরক্ষিত।"
     },
@@ -59,7 +58,6 @@
         "menu_dashboard": "ড্যাশবোর্ড",
         "menu_add_product": "পণ্য যোগ করুন",
         "menu_analytics": "বিশ্লেষণ",
-        "menu_requests": "অনুরোধ",
         "menu_marketing": "বিপণন হাব",
         "menu_support": "সমর্থন",
         "account_menu_label": "আমার অ্যাকাউন্ট",
@@ -79,3 +77,5 @@
         "submit_button": "যাচাইয়ের জন্য জমা দিন"
     }
 }
+
+    
