--- a/src/lib/locales/hi.json
+++ b/src/lib/locales/hi.json
@@ -3,8 +3,7 @@
     "homepage": {
         "title": "AI के साथ अपनी कला को सशक्त बनाएं",
         "subtitle": "आर्टिसन आपको अपनी अनूठी रचनाओं का वर्णन करने, सुनाने और बेचने में मदद करने के लिए बुद्धिमान उपकरण प्रदान करता है। अपनी कला पर ध्यान केंद्रित करें, हम शब्दों को संभाल लेंगे। कारीगरों के लिए मंच पूरी तरह से मुफ्त है।",
-        "artisans_button": "कारीगरों के लिए",
-        "buyers_button": "खरीदारों के लिए",
+        "artisans_button": "बनाना शुरू करें",
         "login": "लॉग इन करें",
         "signup": "साइन अप करें",
         "features_title": "आधुनिक कारीगर के लिए सुविधाएँ",
@@ -15,8 +14,8 @@
         "feature_2_desc": "अपनी कहानी बताएं, और हमारा AI इसे एक मनोरम कथा में परिष्कृत करेगा।",
         "feature_3_title": "स्मार्ट एनालिटिक्स",
         "feature_3_desc": "ग्राहक आपके उत्पादों के साथ कैसे इंटरैक्ट कर रहे हैं, इस पर जानकारी प्राप्त करें।",
-        "feature_4_title": "कस्टम अनुरोध",
-        "feature_4_desc": "सीधे खरीदारों से कमीशन अनुरोध प्राप्त करें और प्रबंधित करें।",
+        "feature_4_title": "मार्केटिंग हब",
+        "feature_4_desc": "प्रचार सामग्री उत्पन्न करें और अपनी कला के लिए बाजार की मांग को समझें।",
         "art_title": "अगली पीढ़ी के लिए समकालीन भारतीय कला",
         "art_subtitle": "आधुनिक भारतीय कलाकारों की खोज करें जो एक ताजा, जीवंत दृष्टिकोण के साथ परंपरा को फिर से परिभाषित कर रहे हैं।",
         "art_1_title": "डिजिटल पौराणिक कथाएं",
@@ -25,8 +24,8 @@
         "art_2_desc": "भारतीय रूपांकनों से युक्त भित्तिचित्र और स्टेंसिल कला, शहरी कैनवस पर बोल्ड बयान देते हैं।",
         "art_3_title": "न्यूनतम लोक",
         "art_3_desc": "वर्ली और गोंड जैसे पारंपरिक लोक रूपों को स्वच्छ रेखाओं और समकालीन रंग पैलेट के साथ फिर से कल्पना की गई।",
-        "payments_title": "लचीला और सुरक्षित भुगतान",
-        "payments_subtitle": "हम सभी के लिए लेनदेन को सहज बनाने के लिए भुगतान विधियों की एक विस्तृत श्रृंखला का समर्थन करते हैं। सभी लेनदेन सुरक्षित और भारतीय नियमों के अनुरूप हैं।",
+        "payments_title": "आपके लिए लचीला और सुरक्षित भुगतान",
+        "payments_subtitle": "हम आपकी कला के लिए भुगतान प्राप्त करने को सहज बनाने के लिए भुगतान विधियों की एक विस्तृत श्रृंखला का समर्थन करते हैं। सभी लेनदेन सुरक्षित और भारतीय नियमों के अनुरूप हैं।",
         "payments_extra": "...और कई अन्य UPI, क्रेडिट और डेबिट कार्ड विकल्प।",
         "footer": "© {year} आर्टिसन। सर्वाधिकार सुरक्षित।"
     },
@@ -59,7 +58,6 @@
         "menu_dashboard": "डैशबोर्ड",
         "menu_add_product": "उत्पाद जोड़ें",
         "menu_analytics": "एनालिटिक्स",
-        "menu_requests": "अनुरोध",
         "menu_marketing": "मार्केटिंग हब",
         "menu_support": "समर्थन",
         "account_menu_label": "मेरा खाता",
@@ -79,3 +77,5 @@
         "submit_button": "सत्यापन के लिए सबमिट करें"
     }
 }
+
+    
