--- a/src/lib/locales/mr.json
+++ b/src/lib/locales/mr.json
@@ -3,8 +3,7 @@
     "homepage": {
         "title": "तुमच्या कलेला AI ने सशक्त करा",
         "subtitle": "आर्टिसन तुम्हाला तुमच्या अद्वितीय निर्मितीचे वर्णन करण्यास, कथन करण्यास आणि विकण्यास मदत करण्यासाठी बुद्धिमान साधने प्रदान करते. तुमच्या कलेवर लक्ष केंद्रित करा, आम्ही शब्द हाताळू. कलाकारांसाठी हे प्लॅटफॉर्म पूर्णपणे विनामूल्य आहे.",
-        "artisans_button": "कलाकारांसाठी",
-        "buyers_button": "खरेदीदारांसाठी",
+        "artisans_button": "तयार करणे सुरू करा",
         "login": "लॉगिन",
         "signup": "साइन अप",
         "features_title": "आधुनिक कलाकारांसाठी वैशिष्ट्ये",
@@ -15,8 +14,8 @@
         "feature_2_desc": "तुमची कथा सांगा, आणि आमचे AI तिला एका आकर्षक कथनात परिष्कृत करेल.",
         "feature_3_title": "स्मार्ट विश्लेषण",
         "feature_3_desc": "ग्राहक तुमच्या उत्पादनांशी कसे संवाद साधत आहेत याबद्दल अंतर्दृष्टी मिळवा.",
-        "feature_4_title": "सानुकूल विनंत्या",
-        "feature_4_desc": "थेट खरेदीदारांकडून कमिशन विनंत्या प्राप्त करा आणि व्यवस्थापित करा.",
+        "feature_4_title": "विपणन केंद्र",
+        "feature_4_desc": "प्रचारात्मक साहित्य तयार करा आणि तुमच्या कलेसाठी बाजारातील मागणी समजून घ्या.",
         "art_title": "पुढील पिढीसाठी समकालीन भारतीय कला",
         "art_subtitle": "नवीन, उत्साही दृष्टिकोनाने परंपरेला पुन्हा परिभाषित करणाऱ्या आधुनिक भारतीय कलाकारांना शोधा.",
         "art_1_title": "डिजिटल पौराणिक कथा",
@@ -25,8 +24,8 @@
         "art_2_desc": "भारतीय आकृतिबंधांनी भरलेले ग्राफिटी आणि स्टेन्सिल आर्ट, शहरी कॅनव्हासवर ठळक विधाने करतात.",
         "art_3_title": "मिनिमलिस्ट लोक",
         "art_3_desc": "वारली आणि गोंड सारखे पारंपारिक लोक प्रकार, स्वच्छ रेषा आणि समकालीन रंग पॅलेटसह पुन्हा कल्पना केलेले.",
-        "payments_title": "लवचिक आणि सुरक्षित पेमेंट",
-        "payments_subtitle": "आम्ही प्रत्येकासाठी व्यवहार अखंड करण्यासाठी पेमेंट पद्धतींची विस्तृत श्रेणी समर्थित करतो. सर्व व्यवहार सुरक्षित आणि भारतीय नियमांनुसार आहेत.",
+        "payments_title": "तुमच्यासाठी लवचिक आणि सुरक्षित पेमेंट",
+        "payments_subtitle": "तुमच्या कलेसाठी पेमेंट मिळवणे अखंड करण्यासाठी आम्ही पेमेंट पद्धतींची विस्तृत श्रेणी समर्थित करतो. सर्व व्यवहार सुरक्षित आणि भारतीय नियमांनुसार आहेत.",
         "payments_extra": "...आणि बरेच UPI, क्रेडिट आणि डेबिट कार्ड पर्याय.",
         "footer": "© {year} आर्टिसन. सर्व हक्क राखीव."
     },
@@ -59,7 +58,6 @@
         "menu_dashboard": "डॅशबोर्ड",
         "menu_add_product": "उत्पादन जोडा",
         "menu_analytics": "विश्लेषण",
-        "menu_requests": "विनंत्या",
         "menu_marketing": "विपणन केंद्र",
         "menu_support": "समर्थन",
         "account_menu_label": "माझे खाते",
@@ -79,3 +77,5 @@
         "submit_button": "पडताळणीसाठी सबमिट करा"
     }
 }
+
+    
