--- a/src/lib/locales/ta.json
+++ b/src/lib/locales/ta.json
@@ -3,8 +3,7 @@
     "homepage": {
         "title": "உங்கள் கைவினைக்கு AI மூலம் శక్తి அளியுங்கள்",
         "subtitle": "Artisan உங்கள் தனித்துவமான படைப்புகளை விவரிக்கவும், விவரிக்கவும் மற்றும் விற்கவும் உதவும் புத்திசாலித்தனமான கருவிகளை வழங்குகிறது. உங்கள் கலையில் கவனம் செலுத்துங்கள், நாங்கள் வார்த்தைகளைக் கையாளுவோம். கைவினைஞர்களுக்கு இந்த தளம் முற்றிலும் இலவசம்.",
-        "artisans_button": "கைவினைஞர்களுக்காக",
-        "buyers_button": "வாங்குபவர்களுக்காக",
+        "artisans_button": "உருவாக்கத் தொடங்குங்கள்",
         "login": "உள்நுழை",
         "signup": "பதிவுபெறு",
         "features_title": "நவீன கைவினைஞருக்கான அம்சங்கள்",
@@ -15,8 +14,8 @@
         "feature_2_desc": "உங்கள் கதையைச் சொல்லுங்கள், எங்கள் AI அதை ஒரு வசீகரிக்கும் വിവരണமாகச் செம்மைப்படுத்தும்.",
         "feature_3_title": "ஸ்மார்ட் பகுப்பாய்வு",
         "feature_3_desc": "வாடிக்கையாளர்கள் உங்கள் தயாரிப்புகளுடன் எவ்வாறு தொடர்பு கொள்கிறார்கள் என்பது குறித்த நுண்ணறிவுகளைப் பெறுங்கள்.",
-        "feature_4_title": "தனிப்பயன் கோரிக்கைகள்",
-        "feature_4_desc": "வாங்குபவர்களிடமிருந்து நேரடியாக கமிஷன் கோரிக்கைகளைப் பெற்று நிர்வகிக்கவும்.",
+        "feature_4_title": "சந்தைப்படுத்தல் மையம்",
+        "feature_4_desc": "விளம்பரப் பொருட்களை உருவாக்கி, உங்கள் கலைக்கான சந்தைத் தேவையையும் புரிந்து கொள்ளுங்கள்.",
         "art_title": "அடுத்த தலைமுறைக்கான சமகால இந்தியக் கலை",
         "art_subtitle": "புதிய, துடிப்பான கண்ணோட்டத்துடன் பாரம்பரியத்தை மறுவரையறை செய்யும் நவீன இந்தியக் கலைஞர்களைக் கண்டறியவும்.",
         "art_1_title": "டிஜிட்டல் புராணம்",
@@ -25,8 +24,8 @@
         "art_2_desc": "இந்திய உருவங்களுடன் உட்செலுத்தப்பட்ட கிராஃபிட்டி மற்றும் ஸ்டென்சில் கலை, நகர்ப்புற கேன்வாஸ்களில் தைரியமான அறிக்கைகளை உருவாக்குகிறது.",
         "art_3_title": "மினிமலிஸ்ட் நாட்டுப்புறம்",
         "art_3_desc": "வார்லி மற்றும் கோண்ட் போன்ற பாரம்பரிய நாட்டுப்புற வடிவங்கள், சுத்தமான கோடுகள் மற்றும் சமகால வண்ணத் தட்டுகளுடன் மீண்டும் கற்பனை செய்யப்பட்டன.",
-        "payments_title": "நெகிழ்வான மற்றும் பாதுகாப்பான கொடுப்பனவுகள்",
-        "payments_subtitle": "அனைவருக்கும் பரிவர்த்தனைகளைத் தடையின்றிச் செய்ய நாங்கள் பரந்த அளவிலான கட்டண முறைகளை ஆதரிக்கிறோம். அனைத்து பரிவர்த்தனைகளும் பாதுகாப்பானவை மற்றும் இந்திய விதிமுறைகளுக்கு இணங்க உள்ளன.",
+        "payments_title": "உங்களுக்கான நெகிழ்வான மற்றும் பாதுகாப்பான கொடுப்பனவுகள்",
+        "payments_subtitle": "உங்கள் கலைக்கான கொடுப்பனவுகளைப் பெறுவதைத் தடையின்றிச் செய்ய நாங்கள் பரந்த அளவிலான கட்டண முறைகளை ஆதரிக்கிறோம். அனைத்து பரிவர்த்தனைகளும் பாதுகாப்பானவை மற்றும் இந்திய விதிமுறைகளுக்கு இணங்க உள்ளன.",
         "payments_extra": "...மற்றும் பல UPI, கிரெடிட் மற்றும் டெபிட் கார்டு விருப்பங்கள்.",
         "footer": "© {year} Artisan. அனைத்து உரிமைகளும் பாதுகாக்கப்பட்டவை."
     },
@@ -59,7 +58,6 @@
         "menu_dashboard": "டாஷ்போர்டு",
         "menu_add_product": "தயாரிப்பைச் சேர்",
         "menu_analytics": "பகுப்பாய்வு",
-        "menu_requests": "கோரிக்கைகள்",
         "menu_marketing": "சந்தைப்படுத்தல் மையம்",
         "menu_support": "ஆதரவு",
         "account_menu_label": "என் கணக்கு",
@@ -79,3 +77,5 @@
         "submit_button": "சரிபார்ப்புக்குச் சமர்ப்பிக்கவும்"
     }
 }
+
+    
