--- a/src/lib/locales/te.json
+++ b/src/lib/locales/te.json
@@ -3,8 +3,7 @@
     "homepage": {
         "title": "మీ కళను AIతో శక్తివంతం చేయండి",
         "subtitle": "ఆర్టిసాన్ మీ ప్రత్యేకమైన సృష్టిలను వివరించడానికి, కథనం చేయడానికి మరియు విక్రయించడానికి మీకు సహాయపడటానికి తెలివైన సాధనాలను అందిస్తుంది. మీ కళపై దృష్టి పెట్టండి, మేము పదాలను నిర్వహిస్తాము. కళాకారులకు వేదిక పూర్తిగా ఉచితం.",
-        "artisans_button": "కళాకారుల కోసం",
-        "buyers_button": "కొనుగోలుదారుల కోసం",
+        "artisans_button": "సృష్టించడం ప్రారంభించండి",
         "login": "లాగిన్",
         "signup": "సైన్ అప్ చేయండి",
         "features_title": "ఆధునిక కళాకారుడి కోసం ఫీచర్లు",
@@ -15,8 +14,8 @@
         "feature_2_desc": "మీ కథను చెప్పండి మరియు మా AI దానిని ఆకర్షణీయమైన కథనంగా మెరుగుపరుస్తుంది.",
         "feature_3_title": "స్మార్ట్ అనలిటిక్స్",
         "feature_3_desc": "కస్టమర్‌లు మీ ఉత్పత్తులతో ఎలా సంకర్షణ చెందుతున్నారనే దానిపై అంతర్దృష్టులను పొందండి.",
-        "feature_4_title": "అనుకూల అభ్యర్థనలు",
-        "feature_4_desc": "నేరుగా కొనుగోలుదారుల నుండి కమీషన్ అభ్యర్థనలను స్వీకరించండి మరియు నిర్వహించండి.",
+        "feature_4_title": "మార్కెటింగ్ హబ్",
+        "feature_4_desc": "ప్రచార సామగ్రిని రూపొందించండి మరియు మీ కళ కోసం మార్కెట్ డిమాండ్‌ను అర్థం చేసుకోండి.",
         "art_title": "తదుపరి తరం కోసం సమకాలీన భారతీయ కళ",
         "art_subtitle": "తాజా, ఉత్సాహభరితమైన దృక్పథంతో సంప్రదాయాన్ని పునర్నిర్వచించే ఆధునిక భారతీయ కళాకారులను కనుగొనండి.",
         "art_1_title": "డిజిటల్ పురాణం",
@@ -25,8 +24,8 @@
         "art_2_desc": "భారతీయ మూలాంశాలతో నిండిన గ్రాఫిటీ మరియు స్టెన్సిల్ కళ, పట్టణ కాన్వాసులపై ధైర్యమైన ప్రకటనలు చేస్తుంది.",
         "art_3_title": "మినిమలిస్ట్ జానపదం",
         "art_3_desc": "వార్లీ మరియు గోండ్ వంటి సాంప్రదాయ జానపద రూపాలు, శుభ్రమైన గీతలు మరియు సమకాలీన రంగుల పాలెట్‌తో పునఃరూపకల్పన చేయబడ్డాయి.",
-        "payments_title": "ఫ్లెక్సిబుల్ & సురక్షిత చెల్లింపులు",
-        "payments_subtitle": "ప్రతిఒక్కరికీ లావాదేవీలను అతుకులు లేకుండా చేయడానికి మేము విస్తృత శ్రేణి చెల్లింపు పద్ధతులకు మద్దతు ఇస్తాము. అన్ని లావాదేవీలు సురక్షితమైనవి మరియు భారతీయ నిబంధనలకు అనుగుణంగా ఉంటాయి.",
+        "payments_title": "మీ కోసం ఫ్లెక్సిబుల్ & సురక్షిత చెల్లింపులు",
+        "payments_subtitle": "మీ కళ కోసం చెల్లింపులను స్వీకరించడానికి అతుకులు లేకుండా చేయడానికి మేము విస్తృత శ్రేణి చెల్లింపు పద్ధతులకు మద్దతు ఇస్తాము. అన్ని లావాదేవీలు సురక్షితమైనవి మరియు భారతీయ నిబంధనలకు అనుగుణంగా ఉంటాయి.",
         "payments_extra": "...మరియు మరిన్ని UPI, క్రెడిట్ మరియు డెబిట్ కార్డ్ ఎంపికలు.",
         "footer": "© {year} ఆర్టిసాన్. అన్ని హక్కులు ప్రత్యేకించబడ్డాయి."
     },
@@ -59,7 +58,6 @@
         "menu_dashboard": "డాష్‌బోర్డ్",
         "menu_add_product": "ఉత్పత్తిని జోడించండి",
         "menu_analytics": "విశ్లేషణలు",
-        "menu_requests": "అభ్యర్థనలు",
         "menu_marketing": "మార్కెటింగ్ హబ్",
         "menu_support": "మద్దతు",
         "account_menu_label": "నా ఖాతా",
@@ -79,3 +77,5 @@
         "submit_button": "ధృవీకరణ కోసం సమర్పించండి"
     }
 }
+
+    
