--- a/src/lib/locales/bn.json
+++ b/src/lib/locales/bn.json
@@ -63,7 +63,7 @@
         "account_menu_label": "আমার অ্যাকাউন্ট",
         "account_menu_verify": "অ্যাকাউন্ট যাচাই করুন",
         "account_menu_profile": "প্রোফাইল",
-        "account_menu_settings": "সেটিংস",
+        "account_menu_settings": "পেমেন্ট সেটিংস",
         "account_menu_logout": "লগ আউট"
     },
     "verification_page": {
@@ -75,7 +75,21 @@
         "gov_id_description": "নিরাপত্তা নিশ্চিত করতে এবং জালিয়াতি রোধ করতে, অনুগ্রহ করে একটি সরকারি আইডি (যেমন, আধার, প্যান) আপলোড করুন।",
         "upload_prompt": "আপলোড করতে ফাইলে ক্লিক করুন বা টেনে আনুন",
         "submit_button": "যাচাইয়ের জন্য জমা দিন"
+    },
+    "payment_settings_page": {
+        "title": "পেমেন্ট সেটিংস",
+        "description": "আপনি আপনার বিক্রয়ের জন্য কীভাবে পেমেন্ট পাবেন তা কনফিগার করুন।",
+        "card_title": "পেআউট পদ্ধতি",
+        "card_description": "অর্থ গ্রহণের জন্য আপনার পছন্দের পদ্ধতি নির্বাচন করুন। আপনার তথ্য এনক্রিপ্ট করা এবং নিরাপদে সংরক্ষণ করা হয়।",
+        "upi_label": "UPI আইডি (VPA)",
+        "upi_placeholder": "yourname@bank",
+        "bank_account_label": "ব্যাংক অ্যাকাউন্ট",
+        "account_holder_name_label": "অ্যাকাউন্ট ধারকের নাম",
+        "account_holder_name_placeholder": "যেমন, প্রিয়া কুমার",
+        "account_number_label": "অ্যাকাউন্ট নম্বর",
+        "account_number_placeholder": "আপনার অ্যাকাউন্ট নম্বর লিখুন",
+        "ifsc_code_label": "IFSC কোড",
+        "ifsc_code_placeholder": "আপনার ব্যাংকের IFSC কোড লিখুন",
+        "save_button": "পেমেন্ট সেটিংস সংরক্ষণ করুন"
     }
 }
-
-    
