--- a/src/lib/locales/te.json
+++ b/src/lib/locales/te.json
@@ -63,7 +63,7 @@
         "account_menu_label": "నా ఖాతా",
         "account_menu_verify": "ఖాతాను ధృవీకరించండి",
         "account_menu_profile": "ప్రొఫైల్",
-        "account_menu_settings": "సెట్టింగ్‌లు",
+        "account_menu_settings": "చెల్లింపు సెట్టింగ్‌లు",
         "account_menu_logout": "లాగ్ అవుట్"
     },
     "verification_page": {
@@ -75,7 +75,21 @@
         "gov_id_description": "భద్రతను నిర్ధారించడానికి మరియు మోసాన్ని నివారించడానికి, దయచేసి ప్రభుత్వ-జారీ చేసిన IDని (ఉదా., ఆధార్, పాన్) అప్‌లోడ్ చేయండి.",
         "upload_prompt": "అప్‌లోడ్ చేయడానికి ఫైల్‌పై క్లిక్ చేయండి లేదా లాగండి",
         "submit_button": "ధృవీకరణ కోసం సమర్పించండి"
+    },
+    "payment_settings_page": {
+        "title": "చెల్లింపు సెట్టింగ్‌లు",
+        "description": "మీరు మీ అమ్మకాలకు చెల్లింపులను ఎలా స్వీకరిస్తారో కాన్ఫిగర్ చేయండి.",
+        "card_title": "చెల్లింపు పద్ధతి",
+        "card_description": "నిధులను స్వీకరించడానికి మీకు ఇష్టమైన పద్ధతిని ఎంచుకోండి. మీ సమాచారం గుప్తీకరించబడింది మరియు సురక్షితంగా నిల్వ చేయబడింది.",
+        "upi_label": "UPI ID (VPA)",
+        "upi_placeholder": "yourname@bank",
+        "bank_account_label": "బ్యాంకు ఖాతా",
+        "account_holder_name_label": "ఖాతాదారుని పేరు",
+        "account_holder_name_placeholder": "ఉదా., ప్రియా కుమార్",
+        "account_number_label": "ఖాతా సంఖ్య",
+        "account_number_placeholder": "మీ ఖాతా సంఖ్యను నమోదు చేయండి",
+        "ifsc_code_label": "IFSC కోడ్",
+        "ifsc_code_placeholder": "మీ బ్యాంక్ యొక్క IFSC కోడ్‌ను నమోదు చేయండి",
+        "save_button": "చెల్లింపు సెట్టింగ్‌లను సేవ్ చేయండి"
     }
 }
-
-    
