--- a/src/lib/locales/bn.json
+++ b/src/lib/locales/bn.json
@@ -62,6 +62,7 @@
         "menu_marketing": "বিপণন হাব",
         "menu_community": "কমিউনিটি হাব",
         "menu_support": "সমর্থন",
+        "menu_live_studio": "লাইভ স্টুডিও",
         "account_menu_label": "আমার অ্যাকাউন্ট",
         "account_menu_verify": "অ্যাকাউন্ট যাচাই করুন",
         "account_menu_profile": "প্রোফাইল",
@@ -98,5 +99,25 @@
         "title": "কমিউনিটি হাব",
         "description": "সহকর্মী কারিগরদের সাথে সংযোগ স্থাপন করুন, ধারণা শেয়ার করুন এবং সহযোগিতা করুন।",
         "send_message": "বার্তা পাঠান"
+    },
+    "live_studio_page": {
+        "video_preview_title": "লাইভ স্টুডিও",
+        "video_preview_description": "লাইভ স্ট্রিমের জন্য আপনার ক্যামেরা ফিড। আপনি এখানে যা দেখেন, আপনার দর্শকরাও তাই দেখবে।",
+        "camera_access_denied": "ক্যামেরা অ্যাক্সেস अस्वीकृत",
+        "enable_camera_prompt": "এই বৈশিষ্ট্যটি ব্যবহার করতে আপনার ব্রাউজার সেটিংসে ক্যামেরা অনুমতি সক্ষম করুন।",
+        "camera_access_required": "ক্যামেরা অ্যাক্সেস প্রয়োজন",
+        "allow_camera_access_prompt": "লাইভ স্টুডিও ব্যবহার করতে আপনার ব্রাউজারে ক্যামেরা অ্যাক্সেসের অনুমতি দিন।",
+        "stream_controls_title": "স্ট্রিম নিয়ন্ত্রণ",
+        "stream_controls_description": "এখান থেকে আপনার লাইভ সেশন পরিচালনা করুন।",
+        "stream_title_label": "স্ট্রিম শিরোনাম",
+        "stream_title_placeholder": "যেমন, লাইভ পটারি সেশন",
+        "go_live_button": "লাইভে যান",
+        "end_stream_button": "স্ট্রিম শেষ করুন",
+        "live_chat_title": "লাইভ চ্যাট",
+        "live_chat_description": "আপনার দর্শকদের সাথে জড়িত হন।",
+        "chat_message_1": "এটা অসাধারণ! চূড়ান্ত অংশটি দেখার জন্য অপেক্ষা করতে পারছি না।",
+        "chat_message_2": "আপনি কোন ধরণের কাদামাটি ব্যবহার করছেন?",
+        "chat_message_3": "দারুণ কৌশল! আমি অনেক কিছু শিখছি।",
+        "chat_placeholder": "একটি বার্তা পাঠান..."
     }
 }
