--- a/src/lib/locales/hi.json
+++ b/src/lib/locales/hi.json
@@ -62,6 +62,7 @@
         "menu_marketing": "मार्केटिंग हब",
         "menu_community": "कम्युनिटी हब",
         "menu_support": "समर्थन",
+        "menu_live_studio": "लाइव स्टूडियो",
         "account_menu_label": "मेरा खाता",
         "account_menu_verify": "खाता सत्यापित करें",
         "account_menu_profile": "प्रोफ़ाइल",
@@ -98,5 +99,25 @@
         "title": "कम्युनिटी हब",
         "description": "साथी कारीगरों से जुड़ें, विचार साझा करें और सहयोग करें।",
         "send_message": "संदेश भेजें"
+    },
+    "live_studio_page": {
+        "video_preview_title": "लाइव स्टूडियो",
+        "video_preview_description": "लाइव स्ट्रीम के लिए आपका कैमरा फ़ीड। आप यहां जो देखते हैं, वही आपके दर्शक देखेंगे।",
+        "camera_access_denied": "कैमरा एक्सेस अस्वीकृत",
+        "enable_camera_prompt": "इस सुविधा का उपयोग करने के लिए कृपया अपनी ब्राउज़र सेटिंग्स में कैमरा अनुमतियों को सक्षम करें।",
+        "camera_access_required": "कैमरा एक्सेस आवश्यक",
+        "allow_camera_access_prompt": "लाइव स्टूडियो का उपयोग करने के लिए कृपया अपने ब्राउज़र में कैमरा एक्सेस की अनुमति दें।",
+        "stream_controls_title": "स्ट्रीम नियंत्रण",
+        "stream_controls_description": "यहां से अपने लाइव सत्र का प्रबंधन करें।",
+        "stream_title_label": "स्ट्रीम शीर्षक",
+        "stream_title_placeholder": "जैसे, लाइव पॉटरी सत्र",
+        "go_live_button": "लाइव जाएं",
+        "end_stream_button": "स्ट्रीम समाप्त करें",
+        "live_chat_title": "लाइव चैट",
+        "live_chat_description": "अपने दर्शकों के साथ जुड़ें।",
+        "chat_message_1": "यह अद्भुत है! अंतिम टुकड़े को देखने के लिए इंतजार नहीं कर सकता।",
+        "chat_message_2": "आप किस तरह की मिट्टी का उपयोग कर रहे हैं?",
+        "chat_message_3": "बढ़िया तकनीक! मैं बहुत कुछ सीख रहा हूँ।",
+        "chat_placeholder": "एक संदेश भेजें..."
     }
 }
