--- a/src/lib/locales/mr.json
+++ b/src/lib/locales/mr.json
@@ -62,6 +62,7 @@
         "menu_marketing": "विपणन केंद्र",
         "menu_community": "कम्युनिटी हब",
         "menu_support": "समर्थन",
+        "menu_live_studio": "लाइव्ह स्टुडिओ",
         "account_menu_label": "माझे खाते",
         "account_menu_verify": "खाते सत्यापित करा",
         "account_menu_profile": "प्रोफाइल",
@@ -98,5 +99,25 @@
         "title": "कम्युनिटी हब",
         "description": "सहकारी कलाकारांशी संपर्क साधा, कल्पना सामायिक करा आणि सहयोग करा.",
         "send_message": "संदेश पाठवा"
+    },
+    "live_studio_page": {
+        "video_preview_title": "लाइव्ह स्टुडिओ",
+        "video_preview_description": "लाइव्ह प्रवाहासाठी तुमचा कॅमेरा फीड. तुम्ही येथे जे पाहता तेच तुमचे प्रेक्षक पाहतील.",
+        "camera_access_denied": "कॅमेरा प्रवेश नाकारला",
+        "enable_camera_prompt": "हे वैशिष्ट्य वापरण्यासाठी कृपया तुमच्या ब्राउझर सेटिंग्जमध्ये कॅमेरा परवानग्या सक्षम करा.",
+        "camera_access_required": "कॅमेरा प्रवेश आवश्यक",
+        "allow_camera_access_prompt": "लाइव्ह स्टुडिओ वापरण्यासाठी कृपया तुमच्या ब्राउझरमध्ये कॅमेरा प्रवेशास अनुमती द्या.",
+        "stream_controls_title": "प्रवाह नियंत्रणे",
+        "stream_controls_description": "तुमचे थेट सत्र येथून व्यवस्थापित करा.",
+        "stream_title_label": "प्रवाह शीर्षक",
+        "stream_title_placeholder": "उदा., थेट पॉटरी सत्र",
+        "go_live_button": "थेट जा",
+        "end_stream_button": "प्रवाह समाप्त करा",
+        "live_chat_title": "थेट गप्पा",
+        "live_chat_description": "तुमच्या प्रेक्षकांशी संलग्न व्हा.",
+        "chat_message_1": "हे आश्चर्यकारक आहे! अंतिम तुकडा पाहण्यासाठी प्रतीक्षा करू शकत नाही.",
+        "chat_message_2": "तुम्ही कोणत्या प्रकारची चिकणमाती वापरत आहात?",
+        "chat_message_3": "उत्तम तंत्र! मी खूप काही शिकत आहे.",
+        "chat_placeholder": "एक संदेश पाठवा..."
     }
 }
