--- a/src/lib/locales/ta.json
+++ b/src/lib/locales/ta.json
@@ -62,6 +62,7 @@
         "menu_marketing": "சந்தைப்படுத்தல் மையம்",
         "menu_community": "சமூக மையம்",
         "menu_support": "ஆதரவு",
+        "menu_live_studio": "நேரடி ஸ்டுடியோ",
         "account_menu_label": "என் கணக்கு",
         "account_menu_verify": "கணக்கைச் சரிபார்க்கவும்",
         "account_menu_profile": "சுயவிவரம்",
@@ -98,5 +99,25 @@
         "title": "சமூக மையம்",
         "description": "சக கைவினைஞர்களுடன் இணையுங்கள், யோசனைகளைப் பகிர்ந்து கொள்ளுங்கள், ஒத்துழைக்கவும்.",
         "send_message": "செய்தி அனுப்பு"
+    },
+    "live_studio_page": {
+        "video_preview_title": "நேரடி ஸ்டுடியோ",
+        "video_preview_description": "நேரடி ஒளிபரப்பிற்கான உங்கள் கேமரா ஊட்டம். நீங்கள் இங்கே பார்ப்பதை உங்கள் பார்வையாளர்கள் பார்ப்பார்கள்.",
+        "camera_access_denied": "கேமரா அணுகல் மறுக்கப்பட்டது",
+        "enable_camera_prompt": "இந்த அம்சத்தைப் பயன்படுத்த உங்கள் உலாவி அமைப்புகளில் கேமரா அனுமதிகளை இயக்கவும்.",
+        "camera_access_required": "கேமரா அணுகல் தேவை",
+        "allow_camera_access_prompt": "நேரடி ஸ்டுடியோவைப் பயன்படுத்த உங்கள் உலாவியில் கேமரா அணுகலை அனுமதிக்கவும்.",
+        "stream_controls_title": "ஓடை கட்டுப்பாடுகள்",
+        "stream_controls_description": "உங்கள் நேரடி அமர்வை এখান থেকে நிர்வகிக்கவும்.",
+        "stream_title_label": "ஓடை தலைப்பு",
+        "stream_title_placeholder": "எ.கா., நேரடி மட்பாண்ட அமர்வு",
+        "go_live_button": "நேரலையில் செல்லுங்கள்",
+        "end_stream_button": "ஓடையை முடிக்கவும்",
+        "live_chat_title": "நேரடி அரட்டை",
+        "live_chat_description": "உங்கள் பார்வையாளர்களுடன் ஈடுபடுங்கள்.",
+        "chat_message_1": "இது அற்புதமாக இருக்கிறது! இறுதிப் பகுதியைப் பார்க்க காத்திருக்க முடியவில்லை.",
+        "chat_message_2": "நீங்கள் என்ன வகையான களிமண்ணைப் பயன்படுத்துகிறீர்கள்?",
+        "chat_message_3": "சிறந்த நுட்பம்! நான் நிறைய கற்றுக்கொள்கிறேன்.",
+        "chat_placeholder": "ஒரு செய்தியை அனுப்புங்கள்..."
     }
 }
