--- a/src/lib/locales/te.json
+++ b/src/lib/locales/te.json
@@ -62,6 +62,7 @@
         "menu_marketing": "మార్కెటింగ్ హబ్",
         "menu_community": "కమ్యూనిటీ హబ్",
         "menu_support": "మద్దతు",
+        "menu_live_studio": "లైవ్ స్టూడియో",
         "account_menu_label": "నా ఖాతా",
         "account_menu_verify": "ఖాతాను ధృవీకరించండి",
         "account_menu_profile": "ప్రొఫైల్",
@@ -98,5 +99,25 @@
         "title": "కమ్యూనిటీ హబ్",
         "description": "సహ కళాకారులతో కనెక్ట్ అవ్వండి, ఆలోచనలను పంచుకోండి మరియు సహకరించండి.",
         "send_message": "సందేశం పంపండి"
+    },
+    "live_studio_page": {
+        "video_preview_title": "లైవ్ స్టూడియో",
+        "video_preview_description": "లైవ్ స్ట్రీమ్ కోసం మీ కెమెరా ఫీడ్. మీరు ఇక్కడ చూసేది మీ ప్రేక్షకులు చూస్తారు.",
+        "camera_access_denied": "కెమెరా యాక్సెస్ నిరాకరించబడింది",
+        "enable_camera_prompt": "ఈ ఫీచర్‌ను ఉపయోగించడానికి దయచేసి మీ బ్రౌజర్ సెట్టింగ్‌లలో కెమెరా అనుమతులను ప్రారంభించండి.",
+        "camera_access_required": "కెమెరా యాక్సెస్ అవసరం",
+        "allow_camera_access_prompt": "లైవ్ స్టూడియోను ఉపయోగించడానికి దయచేసి మీ బ్రౌజర్‌లో కెమెరా యాక్సెస్‌ను అనుమతించండి.",
+        "stream_controls_title": "స్ట్రీమ్ నియంత్రణలు",
+        "stream_controls_description": "మీ ప్రత్యక్ష ప్రసారాన్ని ఇక్కడ నుండి నిర్వహించండి.",
+        "stream_title_label": "స్ట్రీమ్ శీర్షిక",
+        "stream_title_placeholder": "ఉదా., లైవ్ పాటరీ సెషన్",
+        "go_live_button": "లైవ్ వెళ్లండి",
+        "end_stream_button": "స్ట్రీమ్ ముగించండి",
+        "live_chat_title": "లైవ్ చాట్",
+        "live_chat_description": "మీ ప్రేక్షకులతో నిమగ్నమవ్వండి.",
+        "chat_message_1": "ఇది అద్భుతం! చివరి భాగాన్ని చూడటానికి వేచి ఉండలేను.",
+        "chat_message_2": "మీరు ఏ రకమైన మట్టిని ఉపయోగిస్తున్నారు?",
+        "chat_message_3": "గొప్ప టెక్నిక్! నేను చాలా నేర్చుకుంటున్నాను.",
+        "chat_placeholder": "ఒక సందేశం పంపండి..."
     }
 }
