--- a/src/lib/locales/hi.json
+++ b/src/lib/locales/hi.json
@@ -81,7 +81,7 @@
     },
     "payment_settings_page": {
         "title": "भुगतान सेटिंग्स",
-        "description": "आप अपनी बिक्री के लिए भुगतान कैसे प्राप्त करते हैं, इसे कॉन्फ़िगर करें।",
+        "description": "आप अपनी बिक्री के लिए भुगतान कैसे प्राप्त کرتے हैं, इसे कॉन्फ़िगर करें।",
         "card_title": "भुगतान विधि",
         "card_description": "धनराशि प्राप्त करने के लिए अपनी पसंदीदा विधि चुनें। आपकी जानकारी एन्क्रिप्टेड और सुरक्षित रूप से संग्रहीत है।",
         "upi_label": "UPI आईडी (VPA)",
@@ -118,6 +118,9 @@
         "chat_message_1": "यह अद्भुत है! अंतिम टुकड़े को देखने के लिए इंतजार नहीं कर सकता।",
         "chat_message_2": "आप किस तरह की मिट्टी का उपयोग कर रहे हैं?",
         "chat_message_3": "बढ़िया तकनीक! मैं बहुत कुछ सीख रहा हूँ।",
-        "chat_placeholder": "एक संदेश भेजें..."
+        "chat_placeholder": "एक संदेश भेजें...",
+        "verification_required_title": "सत्यापन आवश्यक",
+        "verification_required_description": "लाइव जाने के लिए आपको एक सत्यापित कलाकार होना चाहिए।",
+        "verify_now_link": "अभी सत्यापित करें"
     }
 }
