--- a/src/lib/locales/mr.json
+++ b/src/lib/locales/mr.json
@@ -118,6 +118,9 @@
         "chat_message_1": "हे आश्चर्यकारक आहे! अंतिम तुकडा पाहण्यासाठी प्रतीक्षा करू शकत नाही.",
         "chat_message_2": "तुम्ही कोणत्या प्रकारची चिकणमाती वापरत आहात?",
         "chat_message_3": "उत्तम तंत्र! मी खूप काही शिकत आहे.",
-        "chat_placeholder": "एक संदेश पाठवा..."
+        "chat_placeholder": "एक संदेश पाठवा...",
+        "verification_required_title": "पडताळणी आवश्यक",
+        "verification_required_description": "थेट जाण्यासाठी तुम्ही एक सत्यापित कलाकार असणे आवश्यक आहे.",
+        "verify_now_link": "आता सत्यापित करा"
     }
 }
