--- a/src/lib/locales/ta.json
+++ b/src/lib/locales/ta.json
@@ -118,6 +118,9 @@
         "chat_message_1": "இது அற்புதமாக இருக்கிறது! இறுதிப் பகுதியைப் பார்க்க காத்திருக்க முடியவில்லை.",
         "chat_message_2": "நீங்கள் என்ன வகையான களிமண்ணைப் பயன்படுத்துகிறீர்கள்?",
         "chat_message_3": "சிறந்த நுட்பம்! நான் நிறைய கற்றுக்கொள்கிறேன்.",
-        "chat_placeholder": "ஒரு செய்தியை அனுப்புங்கள்..."
+        "chat_placeholder": "ஒரு செய்தியை அனுப்புங்கள்...",
+        "verification_required_title": "சரிபார்ப்பு தேவை",
+        "verification_required_description": "நேரலையில் செல்ல நீங்கள் ஒரு சரிபார்க்கப்பட்ட கலைஞராக இருக்க வேண்டும்.",
+        "verify_now_link": "இப்போது சரிபார்க்கவும்"
     }
 }
