--- a/src/lib/locales/te.json
+++ b/src/lib/locales/te.json
@@ -118,6 +118,9 @@
         "chat_message_1": "ఇది అద్భుతం! చివరి భాగాన్ని చూడటానికి వేచి ఉండలేను.",
         "chat_message_2": "మీరు ఏ రకమైన మట్టిని ఉపయోగిస్తున్నారు?",
         "chat_message_3": "గొప్ప టెక్నిక్! నేను చాలా నేర్చుకుంటున్నాను.",
-        "chat_placeholder": "ఒక సందేశం పంపండి..."
+        "chat_placeholder": "ఒక సందేశం పంపండి...",
+        "verification_required_title": "ధృవీకరణ అవసరం",
+        "verification_required_description": "ప్రత్యక్ష ప్రసారం చేయడానికి మీరు ధృవీకరించబడిన కళాకారుడిగా ఉండాలి.",
+        "verify_now_link": "ఇప్పుడే ధృవీకరించండి"
     }
 }
